//=========================================================
//
// all messages used by the current chat server and client
//
//=========================================================
package imservice;

enum CMD_TYPE {
    LOGIN = 1;
    MODIFYINFO = 2;
    LOGOUT = 3;
    SENDMSG = 4;

    LOGIN_ACK = 101;
    MODIFYINFO_ACK = 102;
    LOGOUT_ACK = 103;
    SENDMSG_ACK = 104;
}

enum RET_CODE {
    SUCCESS = 1;
    FAILED = 2;
}

message CmdLogin {
    required string UserName=1;
    required string Passwd=2;
}
message CmdAckCommon {
    required RET_CODE Status=1;
    optional string  ErrorDesc=2;
}

message CmdModifyInfo {
    required string UserName=1;
    required string NewPasswd=2;
    required string NickName=3;
}

message CmdLogout {
    required string UserName=1;
}

message CmdSendMsg {
    required string PeerName=1;
    required string MsgBody=2;
}

message ImcCmd {
    required CMD_TYPE         CmdType=1;
    optional CmdLogin         Login=2;
    optional CmdModifyInfo    ModifyInfo=3;
    optional CmdAckCommon     AckCommon=4;
    optional CmdLogout        Logout=5;
    optional CmdSendMsg       SendMsg=6;
}

